--- a/data-engineer.html
+++ b/data-engineer.html
@@ -93,7 +93,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/peak6/jobs/1937436'>Job Application for Data Engineer at PEAK6</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/peak6/jobs/1937436'>Job Application for Data Engineer at PEAK6</a></h5> 
 <p><span class="badge badge-light">Portland, OR  ?  Irvine</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -170,11 +170,11 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">S?o Paulo S?o Paulo  S?o Paulo Brazil  S?o Paulo  S?o Paulo</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://avawomen.join.com/jobs/468006-data-engineer-80-100'>Job @ Ava (Z?rich): Data Engineer (80-100%) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://avawomen.join.com/jobs/468006-data-engineer-80-100'>Job @ Ava (Z?rich): Data Engineer (80-100%) | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland  San Francisco Belgrade</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/sky/job/data-engineer/c6b21d15d8f94e4b9482b7b4762869c6/'>Data Engineer at Sky</a></h5> 
+<h5><a href='https://snap.hr/sky/job/data-engineer/c6b21d15d8f94e4b9482b7b4762869c6/'>Data Engineer at Sky</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -260,7 +260,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://levelset.applytojob.com/apply/ojggr61shU/Software-Data-Engineer'>Software Data Engineer - Levelset - Career Page</a></h5> 
+<h5><a href='http://levelset.applytojob.com/apply/ojggr61shU/Software-Data-Engineer'>Software Data Engineer - Levelset - Career Page</a></h5> 
 <p><span class="badge badge-light">Cairo, Egypt</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -296,11 +296,11 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698266919-data-engineer-f-h'>Adevinta Data Engineer F-H | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698266919-data-engineer-f-h'>Adevinta Data Engineer F-H | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698266353-data-engineer-engineering-center-cluj'>Bosch Group Data Engineer, Engineering Center Cluj | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698266353-data-engineer-engineering-center-cluj'>Bosch Group Data Engineer, Engineering Center Cluj | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -352,11 +352,11 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698051746--senior-data-engineer-business-intelligence-platform-berlin-m-f-d-'>Omio (Senior) Data Engineer / Business Intelligence Platform / Berlin (m / f / d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698051746--senior-data-engineer-business-intelligence-platform-berlin-m-f-d-'>Omio (Senior) Data Engineer / Business Intelligence Platform / Berlin (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tucows/job/oeCqbfwb'>Tucows Careers - Data Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/tucows/job/oeCqbfwb'>Tucows Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario  Canada Canada</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -393,7 +393,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/addepar1/jobs/4496209002'>Job Application for Data Engineer - BI / Analytics  at Addepar</a></h5> 
+<h5><a href='https://boards.greenhouse.io/addepar1/jobs/4496209002'>Job Application for Data Engineer - BI / Analytics  at Addepar</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
